@@ -459,3 +459,6 @@
          output (patch #329) (Gergely Szasz).
 20150419 man/fmfconv.1: add missing options and arrange options in categories
          (Sergio).
+20150419 audio2tape.cc,createhdf.c,fmfconv.c,listbasic.c,raw2hdf.c,rzxtool.c,
+         snap2tzx.c,snapconv.c,tape2wav.c,tapeconv.c: abort program when passed
+         unknown options (fixes bug #318) (thanks, Stuart) (Sergio).
